--- a/frontend/src/components/FeatureBox/index.scss
+++ b/frontend/src/components/FeatureBox/index.scss
@@ -46,22 +46,27 @@
     border-radius: 100%;
     }
     .n1 {
+        border: 5px solid rgb(240, 85, 13);
         background-image: url('https://duhocankhang.edu.vn/wp-content/uploads/2019/12/N1.png');
     }
 
     .n2 {
+        border: 5px solid rgb(13, 157, 240);
         background-image: url('https://duhocankhang.edu.vn/wp-content/uploads/2019/12/N2.png');
     } 
 
     .n3 {
+        border: 5px solid rgb(13, 240, 108);
         background-image: url('https://duhocankhang.edu.vn/wp-content/uploads/2019/12/N3.png');
     } 
 
     .n4 {
+        border: 5px solid rgb(240, 198, 13);
         background-image: url('https://duhocankhang.edu.vn/wp-content/uploads/2019/12/N4.png');
     }
 
     .n5 {
+        border: 5px solid rgb(240, 13, 210);
         background-image: url('https://duhocankhang.edu.vn/wp-content/uploads/2019/12/N5.png');
     }
     
